# docker-compose-demo

./: .env  .flake8  .mypy  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  state.py
app/endpoints/: __init__.py  health_check.py  index.py
scripts/: entrypoint.sh  psql.py  redis_cli.py  start.sh
