[tool.poetry]
name = "docker-compose-template"
version = "1.0.0"
description = "Demo repository"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
SQLAlchemy = "^1.4.29"
databases = "^0.5.4"
aioredis = "^2.0.1"
uvicorn = "^0.17.0"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
asyncpg = "^0.25.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[tool.poetry.scripts]
dpsql = './scripts.psql:main'
dredis = './scripts.redis_cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true
omit = [
    'app/core/*.py',
    'app/main.py',
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]
